# kdsoap-ws-discovery-client

./: .git-blame-ignore-revs  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  KDSoapWSDiscoveryClientConfig.cmake.in
autotests/: CMakeLists.txt  test_wsdiscoveryclient.cpp
docs/: CMakeLists.txt
examples/: CMakeLists.txt
examples/onvif-discover/: CMakeLists.txt  main.cpp  onvifdiscover.cpp  onvifdiscover.h
src/: CMakeLists.txt  wsdiscoveryclient.cpp  wsdiscoveryclient.h  wsdiscoveryprobejob.cpp  wsdiscoveryprobejob.h  wsdiscoveryserviceaggregator.cpp  wsdiscoveryserviceaggregator.h  wsdiscoveryserviceaggregator_p.h  wsdiscoverytargetservice.cpp  wsdiscoverytargetservice.h
wsdl/: download.sh
